kubernetes/apps/home/hassio/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: hassio-service
  namespace: home
subsets:
- addresses:
  - ip: 192.168.1.184
  ports:
  - port: 8123
    name: http
