kubernetes/apps/home/hassio/ingress-home.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hassio
  namespace: home
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - home.
  rules:
  - backendRefs:
    - name: hassio-service
      port: 8123
